--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,2 +1,7 @@
 $header-bg-color: black;
 $netflix-color: #e40d16;
+$background-card-color: black;
+$text-color-card: rgba(255, 255, 255, 0.384);
+$classBold-text-color: white;
+$ratings-stars-color: rgba(255, 217, 0, 0.562);
+
